Correzioni sulle lingue e le imp. internazionali

--- a/icons/manifest.json
+++ b/icons/manifest.json
@@ -1,6 +1,6 @@
 {
- "name": "Iáomai - A new vision on health",
- "short_name": "Iáomai",
+ "name": "iáomai - A new vision on health",
+ "short_name": "iáomai",
  "display": "standalone",
  "start_url": "..\/index.html",
  "id": "..\/index.html",
